fix issue where drawer covers dropdown menu
make mini catalog text smaller + truncate if longer than 25 chars

use DrawerPanelContent provided by KaotoDrawer

--- a/src/components/Catalog.css
+++ b/src/components/Catalog.css
@@ -41,6 +41,7 @@ button.miniCatalog__stepItem:hover {
 }
 
 .miniCatalog__stepItem__grid {
+    font-size: smaller;
     line-height: 40px;
     padding: 2px;
 }
